--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Baudouin — Research & Engineering"
-description: "CFD • Scientific Computing • ML • Quant"
+description: "CFD • Scientific Computing • ML"
 url: ""
 baseurl: ""
 theme: null
