updates home page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Baudouin - Research & Engineering"
-description: "CFD • Scientific Computing • ML • Quant"
+title: "Baudouin Fonkwa, Ph.D."
+description: "CFD • Scientific Computing • A/ML • HPC"
 url: ""
 baseurl: ""
 theme: null
